# final-project

./: .gitignore  README.md
MAS/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  bad_access_test.c  bubble_sort.c  cmake_install.cmake  loop_simple.c  readme.md  run.sh  test.out  trivial.c  trivial.out
MAS/MASPass/: CMakeLists.txt  MAS.cpp  MAS.h  MASPass.cpp  Makefile  cmake_install.cmake
S-Detector/MASBasedPass/: CMakeLists.txt  clean.sh  run.sh  simple_run.sh  test1fail.c  test2fail.c  test3.c  test4.c  test5.c  test7.c  trivial.c
S-Detector/MASBasedPass/MASBasedPass/: CMakeLists.txt  Pass.cpp
S-Detector/MASBasedPass/tests/: larger_tests.sh  run.sh  simple_run.sh  test10.c  test3.c  test6.c  test8.c  test9.c  viz.sh
S-Detector/NaivePass/: CMakeLists.txt  clean.sh  run.sh  simple_run.sh  test.ll  test1.c  test2.c  test4.c  viz.sh
S-Detector/NaivePass/NaivePass/: CMakeLists.txt  Pass.cpp
S-Detector/NaivePass/tests/: run.sh  simple_run.sh  test5.c  trivial.c
S-Detector/benchmarks/: alexnet.c  backtrack.c  bubblesort.c  clean.sh  failure.c  graph.py  graph1.py  graph2.py  graph3.py  graph4.py  graph5.py  graph6.py  insertionsort.c  kmeans.c  offsets.c  patterns.c  run.sh  selectionsort.c  simple_run.sh  summation.c  supersum.c  test3.c  tripletrouble.c  twodimension.c
S-Tracer/: CMakeLists.txt  bubblesort.c  demo.sh  dynamic_trace.text  patterns.c  run.sh  static_trace.txt  trivial.c  trivial_stracer  viz.sh
S-Tracer/TracerPass/: CMakeLists.txt  TracerPass.cpp
spec_benchmarks/specfp2006/433.milc/: exec_info_spec_train1
(+446 files in other folders)
